<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jrk</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="birdcolour@users.noreply.github.com">robin</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>libusbp-1</build_depend>
  <exec_depend>libusbp-1</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
